2024-07-01  dhpark  <dhpark@ezcaretech.com>

	* lisp/init-local.el: calendar view에서 week number 표시, 월요일부터
	일주일 시작

2024-06-30  DalHo Park  <dhp@blue>

	* lisp/init-local.el (org-agenda-files): '~/.org-agenda-files' 파일에
	파일 경로를 한줄씩 쓰면 org-agenda-files 변수에 추가되어 agenda
	view에서 볼 수 있다. 전역 agenda는 google drive에 유지하고, box별
	agenda는 로컬 경로에서 유지하는 방법을 쓰자.

2024-06-28  dhpark  <dhpark@ezcaretech.com>

	* lisp/init-local.el: 현재 라인 하일라이트 추가

2024-06-08  M.W.Park <manywaypark@gmail.com>

	* lisp/init-local.el: org-agenda 관련 설정 추가